test cầu 3 càng liên thông